--- a/flexbox/flex-projeto/index.html
+++ b/flexbox/flex-projeto/index.html
@@ -82,6 +82,7 @@
         <div class="list-planos">
             <div class="item-plano">
                 <h3>Plano 1</h3>
+                <br>
                 <ul>
                     <li>Suporte 24h</li>
                     <li>Serviços de quarto</li>
@@ -92,18 +93,20 @@
     
             <div class="item-plano">
                 <h3>Plano 2</h3>
+                <br>
                 <ul>
                     <li>Suporte 24h</li>
                     <li>Serviços de quarto</li>
                     <li>Guia turístico</li>
                     <li>Roteiro de trilhas</li>
-                    <li>Serviço personalizado</li>
+                    <!-- <li>Serviço personalizado</li> -->
                 </ul>
                 <a href="#" class="btn">Saiba Mais!</a>
             </div>
     
             <div class="item-plano">
                 <h3>Plano 3</h3>
+                <br>
                 <ul>
                     <li>Suporte 24h</li>
                     <li>Serviços de quarto</li>
@@ -118,8 +121,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: jacsonsm dev</p>
+        <div class="flex-container footer">
+            <p>&copy; 2021 CSS Flexbox</p>
+            <p>Desenvolvido por: Jacson Medeiros</p> 
+        </div>        
     </footer>
 </body>
 </html>
