--- a/typescript/index.html
+++ b/typescript/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dio</title>
+  <title>Dio typescript</title>
 </head>
 <body>
-  
+  <H1>Testes com typescript</H1>
+  <input id="input" type="text" placeholder="Digite os dados"/>
+  <script src="./index.ts"></script>
 </body>
 </html>
