--- a/typescript/index.html
+++ b/typescript/index.html
@@ -9,6 +9,6 @@
 <body>
   <H1>Testes com typescript</H1>
   <input id="input" type="text" placeholder="Digite os dados"/>
-  <script src="./index.ts"></script>
+  <script src="./index-animal.ts"></script>
 </body>
 </html>
